--- a/Algebra/UGA Questions (no solutions)/UGA_Algebra_Qual_Questions.html
+++ b/Algebra/UGA Questions (no solutions)/UGA_Algebra_Qual_Questions.html
@@ -288,7 +288,7 @@
 <li><a href="#spring-2015-6-work"><span class="toc-section-number">12.12</span> Spring 2015 #6 <span class="math inline">\(\work\)</span></a></li>
 <li><a href="#fall-2014-5-work"><span class="toc-section-number">12.13</span> Fall 2014 #5 <span class="math inline">\(\work\)</span></a></li>
 <li><a href="#spring-2013-5-work"><span class="toc-section-number">12.14</span> Spring 2013 #5 <span class="math inline">\(\work\)</span></a></li>
-<li><a href="#spring-2021-1-work"><span class="toc-section-number">12.15</span> Spring 2021 #1 <span class="math inline">\(\work\)</span></a></li>
+<li><a href="#spring-2021-1-done"><span class="toc-section-number">12.15</span> Spring 2021 #1 <span class="math inline">\(\done\)</span></a></li>
 <li><a href="#fall-2020-5-work"><span class="toc-section-number">12.16</span> Fall 2020 #5 <span class="math inline">\(\work\)</span></a></li>
 </ul></li>
 <li><a href="#extra-problems"><span class="toc-section-number">13</span> Extra Problems</a>
@@ -387,6 +387,7 @@
 <blockquote>
 <p>Solution due to Swaroop Hegde, typed up + modifications added by DZG.</p>
 </blockquote>
+<div></div>
 <div></div>
 <div></div>
 <h3 data-number="2.4.2" id="spring-2015-1-done"><span class="header-section-number">2.4.2</span> Spring 2015 #1 <span class="math inline">\(\done\)</span></h3>
@@ -610,7 +611,7 @@ g &amp;\mapsto (x\mapsto gx)
 \end{align*}
 <span> is an injective homomorphism.</p></li>
 <li><p>Let <span class="math inline">\(\Phi: \operatorname{Sym}G\to S_N\)</span> be an isomorphism. For <span class="math inline">\(a\in G\)</span> define <span class="math inline">\({\varepsilon}(a) \in \left\{{\pm 1}\right\}\)</span> to be the sign of the permutation <span class="math inline">\(\Phi(C(a))\)</span>. Suppose that <span class="math inline">\(a\)</span> has order <span class="math inline">\(d\)</span>. Prove that <span class="math inline">\({\varepsilon}(a) = -1 \iff d\)</span> is even and <span class="math inline">\(N/d\)</span> is odd.</p></li>
-<li><p>Suppose <span class="math inline">\(N&gt; 2\)</span> and <span class="math inline">\(n\equiv 2 \pmod 4\)</span>. Prove that <span class="math inline">\(G\)</span> is not simple.</p></li>
+<li><p>Suppose <span class="math inline">\(N&gt; 2\)</span> and <span class="math inline">\(n\equiv 2 \operatorname{mod}4\)</span>. Prove that <span class="math inline">\(G\)</span> is not simple.</p></li>
 </ol>
 <blockquote>
 <p>Hint: use part (b).</p>
@@ -620,7 +621,7 @@ g &amp;\mapsto (x\mapsto gx)
 <h2 data-number="6.4" id="fall-2013-1-work"><span class="header-section-number">6.4</span> Fall 2013 #1 <span class="math inline">\(\work\)</span></h2>
 <p>Let <span class="math inline">\(p, q\)</span> be distinct primes.</p>
 <ol type="a">
-<li><p>Let <span class="math inline">\(\mkern 1.5mu\overline{\mkern-1.5muq\mkern-1.5mu}\mkern 1.5mu \in {\mathbb{Z}}_p\)</span> be the class of <span class="math inline">\(q\pmod p\)</span> and let <span class="math inline">\(k\)</span> denote the order of <span class="math inline">\(\mkern 1.5mu\overline{\mkern-1.5muq\mkern-1.5mu}\mkern 1.5mu\)</span> as an element of <span class="math inline">\({\mathbb{Z}}_p^{\times}\)</span>. Prove that no group of order <span class="math inline">\(pq^k\)</span> is simple.</p></li>
+<li><p>Let <span class="math inline">\(\mkern 1.5mu\overline{\mkern-1.5muq\mkern-1.5mu}\mkern 1.5mu \in {\mathbb{Z}}_p\)</span> be the class of <span class="math inline">\(q\operatorname{mod}p\)</span> and let <span class="math inline">\(k\)</span> denote the order of <span class="math inline">\(\mkern 1.5mu\overline{\mkern-1.5muq\mkern-1.5mu}\mkern 1.5mu\)</span> as an element of <span class="math inline">\({\mathbb{Z}}_p^{\times}\)</span>. Prove that no group of order <span class="math inline">\(pq^k\)</span> is simple.</p></li>
 <li><p>Let <span class="math inline">\(G\)</span> be a group of order <span class="math inline">\(pq\)</span>, and prove that <span class="math inline">\(G\)</span> is not simple.</p></li>
 </ol>
 <h2 data-number="6.5" id="spring-2013-4-work"><span class="header-section-number">6.5</span> Spring 2013 #4 <span class="math inline">\(\work\)</span></h2>
@@ -1127,7 +1128,7 @@ f(x) \mathrel{\vcenter{:}}= x^4 + 4x^2 + 64 \in {\mathbb{Q}}[x]
 <li><p>Find all subfields of the splitting field of <span class="math inline">\(f(x)\)</span> over <span class="math inline">\({\mathbb{Q}}\)</span>.</p></li>
 </ol>
 <h2 data-number="8.42" id="fall-2020-4-work"><span class="header-section-number">8.42</span> Fall 2020 #4 <span class="math inline">\(\work\)</span></h2>
-<p>Let <span class="math inline">\(K\)</span> be a Galois extension of <span class="math inline">\(F\)</span>, and let <span class="math inline">\(F \subset E \subset K\)</span> be inclusions of fields. Let <span class="math inline">\(G \mathrel{\vcenter{:}}={ \mathsf{Gal}} (K/F)\)</span> and <span class="math inline">\(H \mathrel{\vcenter{:}}={ \mathsf{Gal}} (K/E)\)</span>, and suppose <span class="math inline">\(H\)</span> contains <span class="math inline">\(N_G(P)\)</span>, where <span class="math inline">\(P\)</span> is a Sylow <span class="math inline">\(p\)</span>-subgroup of <span class="math inline">\(G\)</span> for <span class="math inline">\(p\)</span> a prime. Prove that <span class="math inline">\([E: F] \equiv 1 \pmod p\)</span>.</p>
+<p>Let <span class="math inline">\(K\)</span> be a Galois extension of <span class="math inline">\(F\)</span>, and let <span class="math inline">\(F \subset E \subset K\)</span> be inclusions of fields. Let <span class="math inline">\(G \mathrel{\vcenter{:}}={ \mathsf{Gal}} (K/F)\)</span> and <span class="math inline">\(H \mathrel{\vcenter{:}}={ \mathsf{Gal}} (K/E)\)</span>, and suppose <span class="math inline">\(H\)</span> contains <span class="math inline">\(N_G(P)\)</span>, where <span class="math inline">\(P\)</span> is a Sylow <span class="math inline">\(p\)</span>-subgroup of <span class="math inline">\(G\)</span> for <span class="math inline">\(p\)</span> a prime. Prove that <span class="math inline">\([E: F] \equiv 1 \operatorname{mod}p\)</span>.</p>
 <h2 data-number="8.43" id="exercises"><span class="header-section-number">8.43</span> Exercises</h2>
 <div class="exercise proofenv" title="?">
 <p>Let <span class="math inline">\(p \in \mathbb{Z}\)</span> be a prime number. Then describe the elements of the Galois group of the polynomial <span class="math inline">\(x^{p}-2\)</span>.</p>
@@ -1531,12 +1532,12 @@ A=\left[\begin{array}{ccc}
 <span></p>
 <ol type="a">
 <li><p>Find the Jordan canonical form <span class="math inline">\(J\)</span> of <span class="math inline">\(A\)</span>.</p></li>
-<li><p>Find an invertible matrix <span class="math inline">\(P\)</span> such that <span class="math inline">\(P^{-1}A P = J\)</span>.</p>
-<blockquote>
-<p>You should not need to compute <span class="math inline">\(P^{-1}\)</span>.</p>
-</blockquote></li>
+<li><p>Find an invertible matrix <span class="math inline">\(P\)</span> such that <span class="math inline">\(P^{-1}A P = J\)</span>.</p></li>
 <li><p>Write down the minimal polynomial of <span class="math inline">\(A\)</span>.</p></li>
 </ol>
+<blockquote>
+<p>You should not need to compute <span class="math inline">\(P^{-1}\)</span>.</p>
+</blockquote>
 <h2 data-number="12.8" id="spring-2019-7-done"><span class="header-section-number">12.8</span> Spring 2019 #7 <span class="math inline">\(\done\)</span></h2>
 <p>Let <span class="math inline">\(p\)</span> be a prime number. Let <span class="math inline">\(A\)</span> be a <span class="math inline">\(p \times p\)</span> matrix over a field <span class="math inline">\(F\)</span> with 1 in all entries except 0 on the main diagonal.</p>
 <p>Determine the Jordan canonical form (JCF) of <span class="math inline">\(A\)</span></p>
@@ -1559,11 +1560,11 @@ A=\left[\begin{array}{lll}{0} &amp; {1} &amp; {-2} \\ {1} &amp; {1} &amp; {-3} \
 <span></p>
 <ol type="a">
 <li><p>Find the Jordan canonical form <span class="math inline">\(J\)</span> of <span class="math inline">\(A\)</span>.</p></li>
-<li><p>Find an invertible matrix <span class="math inline">\(P\)</span> such that <span class="math inline">\(P^{-1}AP = J\)</span>.</p>
+<li><p>Find an invertible matrix <span class="math inline">\(P\)</span> such that <span class="math inline">\(P^{-1}AP = J\)</span>.</p></li>
+</ol>
 <blockquote>
 <p>You should not need to compute <span class="math inline">\(P^{-1}\)</span>.</p>
-</blockquote></li>
-</ol>
+</blockquote>
 <h2 data-number="12.10" id="spring-2017-6-work"><span class="header-section-number">12.10</span> Spring 2017 #6 <span class="math inline">\(\work\)</span></h2>
 <p>Let <span class="math inline">\(A\)</span> be an <span class="math inline">\(n\times n\)</span> matrix with all entries equal to <span class="math inline">\(0\)</span> except for the <span class="math inline">\(n-1\)</span> entries just above the diagonal being equal to 2.</p>
 <ol type="a">
@@ -1608,13 +1609,13 @@ A=\left[\begin{array}{ccc}
 <li><p>Show that there does not exist any vector <span class="math inline">\(v\in V\)</span> such that <span class="math inline">\(Tv = v\)</span>, but there <em>does</em> exist a vector <span class="math inline">\(w\in V\)</span> such that <span class="math inline">\(T^2 w= w\)</span>.</p></li>
 <li><p>Give all of the possible Jordan canonical forms of <span class="math inline">\(T\)</span>.</p></li>
 </ol>
-<h2 data-number="12.15" id="spring-2021-1-work"><span class="header-section-number">12.15</span> Spring 2021 #1 <span class="math inline">\(\work\)</span></h2>
+<h2 data-number="12.15" id="spring-2021-1-done"><span class="header-section-number">12.15</span> Spring 2021 #1 <span class="math inline">\(\done\)</span></h2>
 <p>Let m 
 <span class="math display">
 \begin{align*}
 A \mathrel{\vcenter{:}}=
 \begin{bmatrix}
-r &amp; 1 &amp; -1 \\
+4 &amp; 1 &amp; -1 \\
 -6 &amp; -1 &amp; 2 \\
 2 &amp; 1 &amp; 1
 \end{bmatrix}
@@ -1624,13 +1625,13 @@ r &amp; 1 &amp; -1 \\
 <ol type="a">
 <li><p>Find the Jordan canonical form <span class="math inline">\(J\)</span> of <span class="math inline">\(A\)</span>.</p></li>
 <li><p>Find an invertible matrix <span class="math inline">\(P\)</span> such that <span class="math inline">\(J = P ^{-1}A P\)</span>.</p></li>
+<li><p>Write down the minimal polynomial of <span class="math inline">\(A\)</span>.</p></li>
 </ol>
 <blockquote>
 <p>You should not need to compute <span class="math inline">\(P^{-1}\)</span></p>
 </blockquote>
-<ol start="3" type="a">
-<li>Write down the minimal polynomial of <span class="math inline">\(A\)</span>.</li>
-</ol>
+<div></div>
+<div></div>
 <h2 data-number="12.16" id="fall-2020-5-work"><span class="header-section-number">12.16</span> Fall 2020 #5 <span class="math inline">\(\work\)</span></h2>
 <p>Consider the following matrix: 
 <span class="math display">
